#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this irogram.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-11-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999934 released.

        * More code added for the AWS EC2 Liferay demo.


2014-11-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999933 released.

        * More code added for the AWS EC2 Liferay demo.

        * Can now build Apache and install MySQL.


2014-11-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999932 released.

        * More code added for the AWS EC2 Liferay demo.


2014-11-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999931 released.

        * More code added for the AWS EC2 Liferay demo.

        * Added --go -g and -c (for code) to really shorten
          invocations.

        * Added fetch() to use with handles to do true 'Expect'
          like processing of interactive command utilities in
          custom code modules.


2014-11-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999930 released.

        * More code added for the AWS EC2 Liferay demo.


2014-11-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999929 released.

        * More code added for the AWS EC2 Liferay demo.


2014-11-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999928 released.

        * Added code to dynamically discover Liferay URL for
          demo.


2014-11-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999927 released.
