@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 b6d48268c15caefc9d8047f17fdce4e79b290809 ChangeLog
+SHA1 260c181691804d4b6ffcda2f3f3b719643b7d2bf ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 e3ab438d5df16ebbbe11679825b593a21eafc714 MANIFEST
-SHA1 f5942b8f865434bc477528c4187d1167b38925cb META.yml
-SHA1 dbb9b743507a7ef20122b780bd58c576c6aff001 Makefile.PL
+SHA1 52c4cf66c5a0db00dcfabc8392b0dd09f4b64760 META.yml
+SHA1 63ae9b98ee5a2059b9330e60d9e2dc2440cee083 Makefile.PL
 SHA1 7a59a87222485f6c0e7026b30c8195c47823b3b5 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 bc3c830190f8a6cca033e65eaa4be6b7e1976751 lib/Net/FullAuto.pm
+SHA1 a9e843f5b41fc12cd071a776affddd1fc86eadfe lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 e3db77a102d58a41e7403e85ea9740ba0eeceb67 lib/Net/FullAuto/Distro/fa_code.pm
@@ -133,17 +133,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 bde47d7e159545b9a32c518527e122b5c5231901 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 15b442ad7e268218b9156d48bba27c6d84ebcb57 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 40eac92e3a2c978f37c0b0bbaf2f7aa92715e944 lib/Net/FullAuto/FA_Core.pm
+SHA1 c2fb1f96ba1d7a5fde66716e3b9252ee0386635f lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUbQbTAAoJEBa/9Pad787EbmgIANM9M5G2oH0psoUhj9JVjKEE
-0rQc7eu9call7QWNCPUNDqQWBgZy69RfQV+PJvTFcRP9a85XazFIPI2sszpBu3zz
-fQfwddm/T3l7+4x8zbQ7Omg+cdTJOSt6q/SRgQxEFEbSw373KTtRFX36CpicVETK
-vEc0deQwr+N/2dbm0WQZ0UmreAhoVh9Xb23to7dz0Eu61WlErXlnlfBIPW/5iVi6
-qY5GhLo/IHm+pSuR8HIiQe1xa6kYGwLeXjoVVfONpGR0PBXJh6j8mKY7+OuTtkwz
-grRt6nATOukC80aGtEJh/9N11Kns4d27yomJ7I2kVUXqsHqya60WkNmwi1c+a6U=
-=tdH1
+iQEcBAEBAgAGBQJUch/PAAoJEBa/9Pad787Eu3AIALpE+9Ay5F6Y6TpOYX7cESYb
+Gk6Foa/hc25E8FLT8le4KSnHQlYnlwT1VqTQadtbDbBfXyXSWGhluIl0WN1JRsrv
+qMLWIjstU2ehn1AFyutsJeSGd5iO6gHA+Df51viiwYvQAIWeNib1b7sIyFGTrp/s
+GiziNrIJcgaSqmp8rNsthwlE9IUvQ6g6QEBm5sm7N2Ei5kdXOGljxjQNhSEat3BZ
+ygoDX7MSQiJslvE8pcAopFR3GWxfLdXgy+FDIdqlhyyifKrQPO3NimCK/gkorA1O
+E2LItjJ0edL7jWPgr9dv7CR4+PdArgjIFG6/WSe2LNEvJ+gzgLaElF+MYjh5MTc=
+=ex6U
 -----END PGP SIGNATURE-----
