@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.999999999934';
+our $VERSION='0.999999999935';
 
 
 use 5.005;
