@@ -20,6 +20,17 @@
 #######################################################################
 
 
+2014-11-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.999999999935 released.
+
+        * More code added for the AWS EC2 Liferay demo.
+
+        * __display__ is now more accurate.
+
+        * Fixed cwd() adding Windows field in Linux.
+
+
 2014-11-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.999999999934 released.
